# serializer version: 1
# name: TestStateMocker.test_basic_generation
  '''
  ,id,start_date,state
  0,seq-0-profile-0,1997-03-25 12:33:34.755694,HEALTHY
  1,seq-0-profile-0,1997-10-27 20:42:58.296468,SICK
  2,seq-0-profile-0,2025-02-18 20:01:24.757212,HEALTHY
  3,seq-1-profile-0,2023-09-25 23:51:44.585397,HEALTHY
  4,seq-1-profile-0,2024-03-19 19:55:32.959915,SICK
  5,seq-1-profile-0,2025-08-15 06:36:29.513082,SICK
  6,seq-2-profile-0,2013-09-03 08:40:31.242571,HEALTHY
  7,seq-2-profile-0,2015-12-01 03:22:50.385675,SICK
  8,seq-2-profile-0,2015-12-08 06:05:05.944987,REMISSION
  9,seq-2-profile-0,2017-06-04 09:02:15.626055,HEALTHY
  10,seq-3-profile-0,2007-07-17 03:47:15.825784,REMISSION
  11,seq-3-profile-0,2012-12-01 01:10:14.422176,REMISSION
  12,seq-3-profile-0,2015-07-07 21:41:11.053540,SICK
  13,seq-3-profile-0,2017-03-24 17:12:39.484203,HEALTHY
  14,seq-4-profile-0,1987-03-06 17:08:48.561024,REMISSION
  15,seq-4-profile-0,1992-08-05 00:00:20.257759,SICK
  16,seq-4-profile-0,2010-12-07 09:04:08.964392,HEALTHY
  17,seq-5-profile-0,1987-03-06 07:25:10.503903,HEALTHY
  18,seq-5-profile-0,1998-07-09 11:58:18.758204,REMISSION
  19,seq-5-profile-0,2001-05-26 23:48:30.299751,SICK
  20,seq-6-profile-0,1982-09-03 01:01:15.078238,REMISSION
  21,seq-6-profile-0,1991-04-29 09:36:10.806445,REMISSION
  22,seq-6-profile-0,2002-06-08 06:43:40.089016,SICK
  23,seq-6-profile-0,2004-12-14 18:54:52.089295,REMISSION
  24,seq-6-profile-0,2016-09-10 12:35:49.497472,SICK
  25,seq-7-profile-0,2019-11-05 17:21:20.269218,SICK
  26,seq-7-profile-0,2020-02-18 04:04:25.568209,REMISSION
  27,seq-7-profile-0,2023-06-29 16:51:04.221927,SICK
  28,seq-8-profile-0,2007-08-27 10:20:57.031146,REMISSION
  29,seq-8-profile-0,2008-11-05 10:23:18.045839,SICK
  30,seq-8-profile-0,2009-06-12 01:34:10.528185,REMISSION
  31,seq-8-profile-0,2010-10-13 08:01:02.794074,HEALTHY
  32,seq-8-profile-0,2013-03-30 00:04:55.011396,HEALTHY
  33,seq-8-profile-0,2018-10-20 03:09:38.604237,HEALTHY
  34,seq-8-profile-0,2022-06-27 02:03:55.470526,HEALTHY
  35,seq-8-profile-0,2025-01-23 11:47:11.662420,HEALTHY
  36,seq-8-profile-0,2025-05-15 16:57:45.634288,HEALTHY
  37,seq-9-profile-0,2012-07-28 10:58:50.174324,HEALTHY
  38,seq-9-profile-0,2018-06-26 08:33:13.246436,SICK
  39,seq-9-profile-0,2021-10-05 10:28:47.969823,SICK
  
  '''
# ---
# name: TestStateMocker.test_basic_generation.1
  '''
  ,id,_PROFILE_ID_,_SEQ_SIZE_,_T0_,_TIME_SAMPLING_,_STATE-GENERATION_METHOD_,_STATE-MISSING_DATA_
  0,seq-0-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  1,seq-1-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  2,seq-2-profile-0,profile-0,4,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  3,seq-3-profile-0,profile-0,4,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  4,seq-4-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  5,seq-5-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  6,seq-6-profile-0,profile-0,5,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  7,seq-7-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  8,seq-8-profile-0,profile-0,9,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  9,seq-9-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  
  '''
# ---
# name: TestStateMocker.test_different_state_vocabularies
  '''
  ,id,start_date,state
  0,seq-0-profile-0,1997-03-25 12:33:34.755694,NORMAL
  1,seq-0-profile-0,2014-07-11 15:17:26.204956,CRITICAL
  2,seq-0-profile-0,2017-08-08 13:14:06.868930,CRITICAL
  3,seq-0-profile-0,2022-02-24 20:38:21.133060,NORMAL
  4,seq-1-profile-0,2023-09-25 23:51:44.585397,NORMAL
  5,seq-1-profile-0,2023-10-13 00:58:24.864582,FAILURE
  6,seq-1-profile-0,2024-02-23 13:29:54.187150,NORMAL
  7,seq-1-profile-0,2024-03-19 19:55:32.959915,CRITICAL
  8,seq-1-profile-0,2025-08-15 06:36:29.513082,CRITICAL
  9,seq-1-profile-0,2025-12-07 02:06:44.601448,WARNING
  10,seq-2-profile-0,2013-09-03 08:40:31.242571,CRITICAL
  11,seq-2-profile-0,2015-12-08 06:05:05.944987,CRITICAL
  12,seq-2-profile-0,2017-04-06 18:43:49.454821,FAILURE
  13,seq-2-profile-0,2017-06-04 09:02:15.626055,NORMAL
  14,seq-2-profile-0,2018-12-31 09:26:04.695514,CRITICAL
  15,seq-2-profile-0,2020-02-22 06:57:27.097576,NORMAL
  16,seq-3-profile-0,2007-07-17 03:47:15.825784,WARNING
  17,seq-3-profile-0,2010-02-11 20:22:29.362245,CRITICAL
  18,seq-3-profile-0,2011-03-24 16:00:04.101743,WARNING
  19,seq-3-profile-0,2012-12-07 05:19:59.410776,WARNING
  20,seq-3-profile-0,2014-04-21 16:14:58.177578,FAILURE
  21,seq-3-profile-0,2015-12-17 13:49:31.575648,NORMAL
  22,seq-3-profile-0,2018-11-01 23:34:48.518102,WARNING
  23,seq-3-profile-0,2022-01-13 14:41:31.253214,FAILURE
  24,seq-4-profile-0,1987-03-06 17:08:48.561024,FAILURE
  25,seq-4-profile-0,1988-12-24 11:28:04.675180,NORMAL
  26,seq-4-profile-0,2007-02-22 03:32:28.960595,NORMAL
  27,seq-4-profile-0,2010-03-06 17:52:40.545274,WARNING
  28,seq-5-profile-0,1987-03-06 07:25:10.503903,FAILURE
  29,seq-5-profile-0,1989-09-13 21:35:38.210965,FAILURE
  30,seq-5-profile-0,1993-10-18 17:17:55.626365,FAILURE
  31,seq-5-profile-0,1999-01-02 07:52:28.530855,WARNING
  32,seq-5-profile-0,2010-10-07 03:09:16.999887,NORMAL
  33,seq-5-profile-0,2018-07-25 04:55:36.301167,FAILURE
  34,seq-5-profile-0,2024-01-07 05:49:05.758647,CRITICAL
  35,seq-5-profile-0,2024-08-31 16:38:51.874097,CRITICAL
  36,seq-6-profile-0,1982-09-03 01:01:15.078238,FAILURE
  37,seq-6-profile-0,1986-11-26 23:32:35.759926,CRITICAL
  38,seq-6-profile-0,2001-09-29 08:50:42.445940,NORMAL
  39,seq-6-profile-0,2012-04-27 02:27:11.009408,FAILURE
  
  '''
# ---
# name: TestStateMocker.test_different_state_vocabularies.1
  '''
  ,id,_PROFILE_ID_,_SEQ_SIZE_,_T0_,_TIME_SAMPLING_,_STATE-GENERATION_METHOD_,_STATE-MISSING_DATA_
  0,seq-0-profile-0,profile-0,4,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['NORMAL', 'WARNING', 'CRITICAL', 'FAILURE'], weights=None)",0.0
  1,seq-1-profile-0,profile-0,6,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['NORMAL', 'WARNING', 'CRITICAL', 'FAILURE'], weights=None)",0.0
  2,seq-2-profile-0,profile-0,6,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['NORMAL', 'WARNING', 'CRITICAL', 'FAILURE'], weights=None)",0.0
  3,seq-3-profile-0,profile-0,8,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['NORMAL', 'WARNING', 'CRITICAL', 'FAILURE'], weights=None)",0.0
  4,seq-4-profile-0,profile-0,4,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['NORMAL', 'WARNING', 'CRITICAL', 'FAILURE'], weights=None)",0.0
  5,seq-5-profile-0,profile-0,8,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['NORMAL', 'WARNING', 'CRITICAL', 'FAILURE'], weights=None)",0.0
  6,seq-6-profile-0,profile-0,4,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['NORMAL', 'WARNING', 'CRITICAL', 'FAILURE'], weights=None)",0.0
  
  '''
# ---
# name: TestStateMocker.test_multiple_state_entity_features
  '''
  ,id,start_date,health_state,mood_state
  0,seq-0-profile-0,1997-03-25 12:33:34.755694,REMISSION,HAPPY
  1,seq-0-profile-0,1997-10-27 20:42:58.296468,HEALTHY,SAD
  2,seq-0-profile-0,2002-06-18 10:19:51.604301,REMISSION,ANXIOUS
  3,seq-0-profile-0,2003-05-05 02:41:20.511064,SICK,ANXIOUS
  4,seq-0-profile-0,2014-07-11 15:17:26.204956,HEALTHY,SAD
  5,seq-0-profile-0,2017-08-08 13:14:06.868930,REMISSION,NEUTRAL
  6,seq-0-profile-0,2021-03-07 09:39:34.662118,HEALTHY,SAD
  7,seq-0-profile-0,2025-02-18 20:01:24.757212,HEALTHY,ANXIOUS
  8,seq-1-profile-0,2023-09-25 23:51:44.585397,SICK,SAD
  9,seq-1-profile-0,2024-01-19 12:12:57.962107,REMISSION,NEUTRAL
  10,seq-1-profile-0,2024-02-24 20:53:23.251447,HEALTHY,SAD
  11,seq-1-profile-0,2024-05-24 03:44:05.865588,REMISSION,NEUTRAL
  12,seq-1-profile-0,2024-06-03 22:20:44.370967,HEALTHY,NEUTRAL
  13,seq-1-profile-0,2024-09-17 16:08:53.775395,REMISSION,SAD
  14,seq-1-profile-0,2024-12-03 12:30:42.621645,HEALTHY,NEUTRAL
  15,seq-1-profile-0,2025-02-13 15:16:06.324085,HEALTHY,SAD
  16,seq-2-profile-0,2013-09-03 08:40:31.242571,REMISSION,
  17,seq-2-profile-0,2016-02-19 12:19:59.726401,HEALTHY,NEUTRAL
  18,seq-2-profile-0,2017-04-10 21:40:05.639309,REMISSION,SAD
  19,seq-2-profile-0,2018-03-11 02:08:44.967500,SICK,SAD
  20,seq-2-profile-0,2019-04-19 00:29:04.764918,REMISSION,ANXIOUS
  21,seq-2-profile-0,2020-01-05 21:55:34.395545,REMISSION,NEUTRAL
  22,seq-2-profile-0,2020-12-22 22:11:04.514074,REMISSION,SAD
  23,seq-2-profile-0,2023-05-09 19:35:30.730670,SICK,SAD
  24,seq-3-profile-0,2007-07-17 03:47:15.825784,SICK,NEUTRAL
  25,seq-3-profile-0,2008-05-25 09:43:30.764505,SICK,SAD
  26,seq-3-profile-0,2008-09-27 20:16:20.885459,HEALTHY,NEUTRAL
  27,seq-3-profile-0,2010-09-09 02:23:20.052830,HEALTHY,HAPPY
  28,seq-3-profile-0,2018-10-03 22:26:19.980085,SICK,SAD
  29,seq-3-profile-0,2022-06-19 04:17:22.551389,REMISSION,SAD
  30,seq-3-profile-0,2025-01-21 09:09:36.728682,REMISSION,NEUTRAL
  31,seq-3-profile-0,2025-05-14 06:55:22.609079,REMISSION,NEUTRAL
  32,seq-4-profile-0,1987-03-06 17:08:48.561024,SICK,ANXIOUS
  33,seq-4-profile-0,1990-12-20 21:32:26.281752,SICK,
  34,seq-4-profile-0,1999-01-02 14:38:18.654217,HEALTHY,HAPPY
  35,seq-4-profile-0,2013-09-28 16:59:05.194934,SICK,HAPPY
  36,seq-5-profile-0,1987-03-06 07:25:10.503903,SICK,
  37,seq-5-profile-0,1988-07-06 00:35:30.245059,SICK,HAPPY
  38,seq-5-profile-0,1991-12-01 02:16:59.818701,SICK,SAD
  39,seq-5-profile-0,1997-03-23 08:08:11.313872,REMISSION,ANXIOUS
  40,seq-5-profile-0,2004-04-07 09:58:51.608027,REMISSION,HAPPY
  41,seq-5-profile-0,2006-05-27 16:52:37.854637,REMISSION,SAD
  42,seq-5-profile-0,2012-11-24 17:17:37.334895,HEALTHY,NEUTRAL
  43,seq-5-profile-0,2022-06-25 05:43:54.983298,HEALTHY,HAPPY
  44,seq-6-profile-0,1982-09-03 01:01:15.078238,REMISSION,HAPPY
  45,seq-6-profile-0,1996-03-06 14:29:33.577244,SICK,ANXIOUS
  46,seq-6-profile-0,2005-03-17 02:37:28.353533,HEALTHY,ANXIOUS
  47,seq-6-profile-0,2006-05-12 17:50:25.156203,SICK,HAPPY
  48,seq-7-profile-0,2019-11-05 17:21:20.269218,SICK,ANXIOUS
  49,seq-7-profile-0,2020-12-25 08:54:37.972940,HEALTHY,NEUTRAL
  50,seq-7-profile-0,2023-07-12 00:49:41.936414,REMISSION,ANXIOUS
  51,seq-7-profile-0,2024-08-13 11:36:15.979632,SICK,NEUTRAL
  52,seq-7-profile-0,2025-05-09 13:37:39.767296,HEALTHY,
  53,seq-7-profile-0,2025-07-09 08:53:52.985204,HEALTHY,ANXIOUS
  54,seq-7-profile-0,2025-08-17 23:48:20.852469,REMISSION,NEUTRAL
  55,seq-7-profile-0,2025-10-24 15:00:51.065956,SICK,NEUTRAL
  
  '''
# ---
# name: TestStateMocker.test_multiple_state_entity_features.1
  '''
  ,id,_PROFILE_ID_,_SEQ_SIZE_,_T0_,_TIME_SAMPLING_,_HEALTH_STATE-GENERATION_METHOD_,_MOOD_STATE-GENERATION_METHOD_,_HEALTH_STATE-MISSING_DATA_,_MOOD_STATE-MISSING_DATA_
  0,seq-0-profile-0,profile-0,8,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)","RandomGenMethod(vocabulary=['HAPPY', 'SAD', 'NEUTRAL', 'ANXIOUS'], weights=None)",0.0,0.1
  1,seq-1-profile-0,profile-0,8,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)","RandomGenMethod(vocabulary=['HAPPY', 'SAD', 'NEUTRAL', 'ANXIOUS'], weights=None)",0.0,0.1
  2,seq-2-profile-0,profile-0,8,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)","RandomGenMethod(vocabulary=['HAPPY', 'SAD', 'NEUTRAL', 'ANXIOUS'], weights=None)",0.0,0.1
  3,seq-3-profile-0,profile-0,8,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)","RandomGenMethod(vocabulary=['HAPPY', 'SAD', 'NEUTRAL', 'ANXIOUS'], weights=None)",0.0,0.1
  4,seq-4-profile-0,profile-0,4,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)","RandomGenMethod(vocabulary=['HAPPY', 'SAD', 'NEUTRAL', 'ANXIOUS'], weights=None)",0.0,0.1
  5,seq-5-profile-0,profile-0,8,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)","RandomGenMethod(vocabulary=['HAPPY', 'SAD', 'NEUTRAL', 'ANXIOUS'], weights=None)",0.0,0.1
  6,seq-6-profile-0,profile-0,4,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)","RandomGenMethod(vocabulary=['HAPPY', 'SAD', 'NEUTRAL', 'ANXIOUS'], weights=None)",0.0,0.1
  7,seq-7-profile-0,profile-0,8,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)","RandomGenMethod(vocabulary=['HAPPY', 'SAD', 'NEUTRAL', 'ANXIOUS'], weights=None)",0.0,0.1
  
  '''
# ---
# name: TestStateMocker.test_profile_parameters[profile_params0]
  '''
  ,id,start_date,state
  0,seq-0-profile-0,1997-03-25 12:33:34.755694,SICK
  1,seq-0-profile-0,1998-11-25 23:16:22.751909,HEALTHY
  2,seq-0-profile-0,2001-09-19 23:15:20.245084,REMISSION
  3,seq-1-profile-0,2023-09-25 23:51:44.585397,HEALTHY
  4,seq-1-profile-0,2025-09-12 04:54:28.124850,SICK
  5,seq-2-profile-0,2013-09-03 08:40:31.242571,REMISSION
  6,seq-2-profile-0,2021-01-31 02:21:25.723816,SICK
  7,seq-3-profile-0,2007-07-17 03:47:15.825784,SICK
  8,seq-3-profile-0,2007-12-02 23:22:24.848322,REMISSION
  9,seq-3-profile-0,2020-08-11 17:58:20.431627,REMISSION
  10,seq-3-profile-0,2025-06-12 03:07:06.603652,REMISSION
  11,seq-4-profile-0,1987-03-06 17:08:48.561024,HEALTHY
  12,seq-4-profile-0,1995-06-04 01:14:11.045172,HEALTHY
  13,seq-4-profile-0,2019-07-01 05:24:05.594385,HEALTHY
  
  '''
# ---
# name: TestStateMocker.test_profile_parameters[profile_params0].1
  '''
  ,id,_PROFILE_ID_,_SEQ_SIZE_,_T0_,_TIME_SAMPLING_,_STATE-GENERATION_METHOD_,_STATE-MISSING_DATA_
  0,seq-0-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  1,seq-1-profile-0,profile-0,2,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  2,seq-2-profile-0,profile-0,2,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  3,seq-3-profile-0,profile-0,4,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  4,seq-4-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  
  '''
# ---
# name: TestStateMocker.test_profile_parameters[profile_params1]
  '''
  ,id,start_date,state
  0,seq-0-profile-0,1997-03-25 12:33:34.755694,SICK
  1,seq-0-profile-0,2002-07-05 00:43:44.566949,HEALTHY
  2,seq-0-profile-0,2005-12-25 22:20:51.595086,REMISSION
  3,seq-0-profile-0,2009-08-28 22:23:05.913238,SICK
  4,seq-0-profile-0,2012-04-30 05:46:23.012454,HEALTHY
  5,seq-1-profile-0,2023-09-25 23:51:44.585397,HEALTHY
  6,seq-1-profile-0,2024-01-19 12:12:57.962107,HEALTHY
  7,seq-1-profile-0,2024-05-24 03:44:05.865588,SICK
  8,seq-1-profile-0,2024-05-24 21:55:44.333047,REMISSION
  9,seq-1-profile-0,2025-02-13 15:16:06.324085,SICK
  10,seq-2-profile-0,2013-09-03 08:40:31.242571,HEALTHY
  11,seq-2-profile-0,2014-03-31 12:53:45.270336,SICK
  12,seq-2-profile-0,2014-06-23 07:14:09.653818,SICK
  13,seq-2-profile-0,2015-10-11 06:04:25.536181,HEALTHY
  14,seq-2-profile-0,2016-02-19 12:19:59.726401,REMISSION
  15,seq-2-profile-0,2017-06-06 01:11:16.454732,SICK
  16,seq-2-profile-0,2018-03-11 02:08:44.967500,HEALTHY
  17,seq-2-profile-0,2019-04-19 00:29:04.764918,SICK
  18,seq-2-profile-0,2020-01-05 21:55:34.395545,REMISSION
  19,seq-2-profile-0,2020-12-22 22:11:04.514074,HEALTHY
  20,seq-2-profile-0,2021-03-01 01:09:59.066913,HEALTHY
  21,seq-2-profile-0,2023-05-09 19:35:30.730670,REMISSION
  22,seq-2-profile-0,2023-08-22 08:47:11.538892,SICK
  23,seq-2-profile-0,2025-05-15 21:01:01.624362,SICK
  24,seq-2-profile-0,2025-07-30 06:30:13.152934,SICK
  25,seq-3-profile-0,2007-07-17 03:47:15.825784,HEALTHY
  26,seq-3-profile-0,2008-03-05 01:32:02.719493,HEALTHY
  27,seq-3-profile-0,2009-05-05 19:46:11.547904,SICK
  28,seq-3-profile-0,2009-10-17 03:17:37.869966,SICK
  29,seq-3-profile-0,2010-12-14 17:37:48.490447,HEALTHY
  30,seq-3-profile-0,2012-04-26 05:41:40.395643,HEALTHY
  31,seq-3-profile-0,2013-04-18 03:52:58.680903,HEALTHY
  32,seq-3-profile-0,2015-09-01 05:54:12.210768,SICK
  33,seq-3-profile-0,2016-09-06 06:26:30.248617,HEALTHY
  34,seq-3-profile-0,2017-02-21 02:30:04.617931,REMISSION
  35,seq-3-profile-0,2017-08-19 17:54:59.654724,REMISSION
  36,seq-3-profile-0,2019-10-09 15:00:33.371646,HEALTHY
  37,seq-3-profile-0,2020-03-04 00:15:29.566670,HEALTHY
  38,seq-3-profile-0,2024-04-29 15:03:34.628003,REMISSION
  39,seq-3-profile-0,2025-06-09 22:29:37.813704,HEALTHY
  40,seq-4-profile-0,1987-03-06 17:08:48.561024,HEALTHY
  41,seq-4-profile-0,2010-05-23 12:39:31.982821,REMISSION
  42,seq-4-profile-0,2017-04-09 14:48:14.323464,SICK
  43,seq-4-profile-0,2021-12-01 18:42:56.496180,SICK
  44,seq-4-profile-0,2023-08-27 04:08:28.885310,REMISSION
  45,seq-5-profile-0,1987-03-06 07:25:10.503903,REMISSION
  46,seq-5-profile-0,1988-12-06 17:52:08.464928,HEALTHY
  47,seq-5-profile-0,1990-08-12 08:16:30.587236,HEALTHY
  48,seq-5-profile-0,1994-10-14 18:31:56.537119,SICK
  49,seq-5-profile-0,1997-09-17 14:05:21.303062,SICK
  50,seq-5-profile-0,1999-10-23 02:47:13.696882,SICK
  51,seq-5-profile-0,2001-01-10 17:34:33.810812,REMISSION
  52,seq-5-profile-0,2002-04-08 10:46:39.779715,REMISSION
  53,seq-5-profile-0,2019-05-09 14:52:57.319909,REMISSION
  54,seq-5-profile-0,2022-12-20 05:50:08.609603,HEALTHY
  55,seq-6-profile-0,1982-09-03 01:01:15.078238,SICK
  56,seq-6-profile-0,1982-11-29 10:43:32.795162,SICK
  57,seq-6-profile-0,1985-11-26 00:31:48.469910,REMISSION
  58,seq-6-profile-0,1988-10-11 13:18:11.698455,HEALTHY
  59,seq-6-profile-0,1991-04-14 05:40:00.739214,HEALTHY
  60,seq-6-profile-0,1994-11-05 12:16:29.088900,SICK
  61,seq-6-profile-0,2006-03-10 05:10:46.612666,SICK
  62,seq-6-profile-0,2016-02-18 21:22:36.427661,HEALTHY
  63,seq-6-profile-0,2017-06-06 21:05:51.550511,HEALTHY
  64,seq-6-profile-0,2025-06-07 11:55:54.041251,REMISSION
  65,seq-7-profile-0,2019-11-05 17:21:20.269218,SICK
  66,seq-7-profile-0,2020-03-27 15:18:10.388532,REMISSION
  67,seq-7-profile-0,2020-04-20 05:11:36.235632,SICK
  68,seq-7-profile-0,2020-07-23 06:13:09.859885,HEALTHY
  69,seq-7-profile-0,2021-10-04 23:01:18.574120,REMISSION
  70,seq-7-profile-0,2021-11-05 21:19:17.305309,REMISSION
  71,seq-7-profile-0,2021-11-18 17:41:29.462136,REMISSION
  72,seq-7-profile-0,2022-01-19 17:15:38.846888,REMISSION
  73,seq-7-profile-0,2023-09-07 03:14:06.669049,REMISSION
  74,seq-7-profile-0,2024-03-12 23:46:43.187784,HEALTHY
  75,seq-7-profile-0,2024-05-01 18:53:09.211476,SICK
  76,seq-7-profile-0,2024-05-03 03:12:20.782937,HEALTHY
  77,seq-7-profile-0,2024-08-04 19:12:17.131591,SICK
  78,seq-7-profile-0,2024-11-12 03:31:15.921711,HEALTHY
  79,seq-7-profile-0,2025-02-27 06:00:17.110317,SICK
  80,seq-8-profile-0,2007-08-27 10:20:57.031146,REMISSION
  81,seq-8-profile-0,2009-11-05 23:49:51.979995,HEALTHY
  82,seq-8-profile-0,2016-04-26 05:19:03.479359,REMISSION
  83,seq-8-profile-0,2016-09-17 20:18:08.697093,SICK
  84,seq-8-profile-0,2017-12-14 01:45:54.901993,SICK
  85,seq-8-profile-0,2019-05-09 06:09:19.980251,REMISSION
  86,seq-8-profile-0,2020-09-27 10:57:36.322024,REMISSION
  87,seq-8-profile-0,2021-08-12 00:45:38.393581,SICK
  88,seq-8-profile-0,2021-10-19 06:19:15.098785,REMISSION
  89,seq-8-profile-0,2023-12-07 05:28:13.027310,HEALTHY
  90,seq-9-profile-0,2012-07-28 10:58:50.174324,HEALTHY
  91,seq-9-profile-0,2012-11-30 03:25:43.261118,REMISSION
  92,seq-9-profile-0,2014-01-08 16:15:54.046921,SICK
  93,seq-9-profile-0,2018-04-25 12:03:02.144912,SICK
  94,seq-9-profile-0,2019-08-05 09:00:32.388104,REMISSION
  95,seq-10-profile-0,1980-12-11 21:44:14.739270,HEALTHY
  96,seq-10-profile-0,1982-05-13 04:10:25.351001,SICK
  97,seq-10-profile-0,1995-02-10 10:21:41.740374,REMISSION
  98,seq-10-profile-0,2003-11-11 12:09:19.464097,SICK
  99,seq-10-profile-0,2009-08-15 04:51:58.196888,REMISSION
  100,seq-11-profile-0,2024-08-13 11:35:12.746538,REMISSION
  101,seq-11-profile-0,2024-09-21 09:39:10.027427,HEALTHY
  102,seq-11-profile-0,2024-11-02 23:48:16.173925,REMISSION
  103,seq-11-profile-0,2024-12-07 03:44:16.882718,REMISSION
  104,seq-11-profile-0,2024-12-17 12:23:47.405684,SICK
  105,seq-11-profile-0,2025-01-06 23:17:31.427210,HEALTHY
  106,seq-11-profile-0,2025-03-08 22:53:36.176645,SICK
  107,seq-11-profile-0,2025-08-30 10:30:57.475964,HEALTHY
  108,seq-11-profile-0,2025-11-15 06:40:42.873812,SICK
  109,seq-11-profile-0,2025-11-26 11:09:22.717995,SICK
  110,seq-12-profile-0,2018-04-17 23:32:55.362587,REMISSION
  111,seq-12-profile-0,2023-03-06 02:31:06.191735,REMISSION
  112,seq-12-profile-0,2024-06-27 09:16:31.378575,HEALTHY
  113,seq-12-profile-0,2024-07-09 21:46:54.804260,SICK
  114,seq-12-profile-0,2025-01-04 04:43:06.761718,HEALTHY
  115,seq-13-profile-0,1989-10-08 02:04:33.268717,REMISSION
  116,seq-13-profile-0,1993-10-03 16:11:25.270298,REMISSION
  117,seq-13-profile-0,1996-07-12 09:36:06.264278,HEALTHY
  118,seq-13-profile-0,1998-01-10 20:41:52.122234,SICK
  119,seq-13-profile-0,2001-04-16 21:13:37.339869,SICK
  120,seq-13-profile-0,2005-03-30 19:15:56.258667,HEALTHY
  121,seq-13-profile-0,2009-04-24 02:29:38.067342,REMISSION
  122,seq-13-profile-0,2019-01-09 22:13:53.577696,SICK
  123,seq-13-profile-0,2022-02-09 06:50:58.846802,REMISSION
  124,seq-13-profile-0,2022-03-28 00:39:04.511108,SICK
  125,seq-14-profile-0,1988-05-13 08:22:17.468880,HEALTHY
  126,seq-14-profile-0,1988-08-16 22:19:09.465919,HEALTHY
  127,seq-14-profile-0,1992-11-16 06:52:49.786089,HEALTHY
  128,seq-14-profile-0,1996-09-21 21:29:14.743027,REMISSION
  129,seq-14-profile-0,2000-07-12 16:35:47.736897,REMISSION
  130,seq-14-profile-0,2001-01-26 19:39:57.105674,REMISSION
  131,seq-14-profile-0,2002-01-19 10:37:53.688609,HEALTHY
  132,seq-14-profile-0,2004-01-28 18:35:37.710292,HEALTHY
  133,seq-14-profile-0,2007-08-03 20:13:19.949663,REMISSION
  134,seq-14-profile-0,2007-11-22 09:51:00.865832,REMISSION
  135,seq-14-profile-0,2014-10-28 20:30:07.455879,HEALTHY
  136,seq-14-profile-0,2019-02-25 13:22:40.052408,SICK
  137,seq-14-profile-0,2020-10-04 16:59:28.610242,HEALTHY
  138,seq-14-profile-0,2023-11-08 06:52:46.053816,REMISSION
  139,seq-14-profile-0,2024-12-09 03:24:53.514130,REMISSION
  
  '''
# ---
# name: TestStateMocker.test_profile_parameters[profile_params1].1
  '''
  ,id,_PROFILE_ID_,_SEQ_SIZE_,_T0_,_TIME_SAMPLING_,_STATE-GENERATION_METHOD_,_STATE-MISSING_DATA_
  0,seq-0-profile-0,profile-0,5,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  1,seq-1-profile-0,profile-0,5,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  2,seq-2-profile-0,profile-0,15,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  3,seq-3-profile-0,profile-0,15,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  4,seq-4-profile-0,profile-0,5,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  5,seq-5-profile-0,profile-0,10,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  6,seq-6-profile-0,profile-0,10,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  7,seq-7-profile-0,profile-0,15,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  8,seq-8-profile-0,profile-0,10,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  9,seq-9-profile-0,profile-0,5,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  10,seq-10-profile-0,profile-0,5,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  11,seq-11-profile-0,profile-0,10,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  12,seq-12-profile-0,profile-0,5,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  13,seq-13-profile-0,profile-0,10,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  14,seq-14-profile-0,profile-0,15,"SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(3.0, 100.0), min_date=1980-01-01T00:00:00, max_date=2026-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  
  '''
# ---
# name: TestStateMocker.test_sequence_specific_time_parameters[sequence_specific_time_params0]
  '''
  ,id,start_date,state
  0,seq-0-profile-0,2025-05-17 07:58:56.921702,HEALTHY
  1,seq-0-profile-0,2025-05-30 13:21:08.470311,SICK
  2,seq-0-profile-0,2025-06-21 20:20:21.374392,HEALTHY
  3,seq-1-profile-0,2025-12-13 01:26:24.650869,SICK
  4,seq-1-profile-0,2025-12-13 10:18:10.932981,REMISSION
  5,seq-1-profile-0,2025-12-23 20:15:22.145664,HEALTHY
  6,seq-1-profile-0,2025-12-25 18:18:28.014752,SICK
  7,seq-1-profile-0,2025-12-28 14:22:50.971871,HEALTHY
  8,seq-2-profile-0,2025-09-24 10:41:56.672392,SICK
  9,seq-2-profile-0,2025-10-12 04:24:21.742033,REMISSION
  10,seq-2-profile-0,2025-10-12 08:06:15.206802,REMISSION
  11,seq-2-profile-0,2025-10-15 03:50:55.794365,HEALTHY
  12,seq-2-profile-0,2025-10-24 03:01:18.193179,SICK
  13,seq-2-profile-0,2025-12-14 15:41:52.080096,HEALTHY
  14,seq-2-profile-0,2025-12-28 01:32:59.672593,HEALTHY
  15,seq-3-profile-0,2025-08-06 21:52:49.864603,REMISSION
  16,seq-3-profile-0,2025-10-09 00:19:52.906739,SICK
  17,seq-3-profile-0,2025-10-22 13:44:21.358408,HEALTHY
  18,seq-4-profile-0,2025-02-26 18:58:43.834458,REMISSION
  19,seq-4-profile-0,2025-05-27 06:13:02.838532,SICK
  20,seq-4-profile-0,2025-09-02 18:10:59.450603,SICK
  
  '''
# ---
# name: TestStateMocker.test_sequence_specific_time_parameters[sequence_specific_time_params0].1
  '''
  ,id,_PROFILE_ID_,_SEQ_SIZE_,_T0_,_TIME_SAMPLING_,_STATE-GENERATION_METHOD_,_STATE-MISSING_DATA_
  0,seq-0-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  1,seq-1-profile-0,profile-0,5,"SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  2,seq-2-profile-0,profile-0,7,"SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  3,seq-3-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  4,seq-4-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","SeqSpeTimeStrategy(distribution=Uniform(1, 10), min_date=2025-01-01T00:00:00, max_date=2025-12-31T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  
  '''
# ---
# name: TestStateMocker.test_sequence_specific_time_parameters[sequence_specific_time_params1]
  '''
  ,id,start_date,state
  0,seq-0-profile-0,2023-04-06 10:51:25.060617,REMISSION
  1,seq-0-profile-0,2023-08-06 20:04:04.788779,SICK
  2,seq-0-profile-0,2024-02-29 23:36:11.648590,HEALTHY
  3,seq-1-profile-0,2029-04-30 06:39:14.322330,HEALTHY
  4,seq-1-profile-0,2029-09-09 19:33:39.198663,HEALTHY
  5,seq-1-profile-0,2029-11-19 07:14:57.244898,REMISSION
  6,seq-2-profile-0,2026-09-28 07:52:36.472215,REMISSION
  7,seq-2-profile-0,2026-10-19 07:12:09.064872,REMISSION
  8,seq-2-profile-0,2027-04-02 07:39:43.106559,REMISSION
  9,seq-2-profile-0,2027-05-03 20:33:21.214037,HEALTHY
  10,seq-2-profile-0,2028-11-08 13:56:15.605494,HEALTHY
  11,seq-2-profile-0,2029-04-21 12:52:20.865601,HEALTHY
  12,seq-2-profile-0,2029-11-12 11:42:25.921331,REMISSION
  13,seq-3-profile-0,2025-05-15 11:28:53.373030,REMISSION
  14,seq-3-profile-0,2026-02-06 00:28:47.144786,SICK
  15,seq-3-profile-0,2026-07-15 10:27:30.669581,SICK
  16,seq-3-profile-0,2026-08-03 21:43:18.053262,HEALTHY
  17,seq-3-profile-0,2027-02-14 14:10:35.885228,REMISSION
  18,seq-3-profile-0,2027-07-11 10:54:22.208009,REMISSION
  19,seq-3-profile-0,2027-12-01 21:02:29.019589,REMISSION
  20,seq-4-profile-0,2021-05-04 02:36:30.821210,REMISSION
  21,seq-4-profile-0,2022-05-17 15:12:53.240840,REMISSION
  22,seq-4-profile-0,2023-07-12 09:29:13.297677,HEALTHY
  23,seq-4-profile-0,2024-02-06 17:07:41.892151,REMISSION
  24,seq-4-profile-0,2024-10-22 20:37:23.442058,HEALTHY
  
  '''
# ---
# name: TestStateMocker.test_sequence_specific_time_parameters[sequence_specific_time_params1].1
  '''
  ,id,_PROFILE_ID_,_SEQ_SIZE_,_T0_,_TIME_SAMPLING_,_STATE-GENERATION_METHOD_,_STATE-MISSING_DATA_
  0,seq-0-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  1,seq-1-profile-0,profile-0,3,"SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  2,seq-2-profile-0,profile-0,7,"SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  3,seq-3-profile-0,profile-0,7,"SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  4,seq-4-profile-0,profile-0,5,"SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","SeqSpeTimeStrategy(distribution=Normal(0, 1), min_date=2020-01-01T00:00:00, max_date=2030-01-01T00:00:00)","RandomGenMethod(vocabulary=['HEALTHY', 'SICK', 'REMISSION'], weights=None)",0.0
  
  '''
# ---
